--- a/memory game/memory game.vcxproj
+++ b/memory game/memory game.vcxproj
@@ -146,7 +146,7 @@
   <ItemGroup>
     <ClInclude Include="board.h" />
     <ClInclude Include="game.h" />
-    <ClInclude Include="structs.h" />
+    <ClInclude Include="variables.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
